# darkdns

./: AUTHORS  Makefile.am  README.md  configure.ac
trunk/: test.c  test.h
trunk/dns/: DNSClient.c  DNSClient.h  DNSServer.c  DNSServer.h  dns.c  dns.h
trunk/kernel/: kernel.c  kernel.h
trunk/kernel/bdd/: bdd.c  bdd.h  test.c
trunk/kernel/buffer/: androBuffer.c  androBuffer.h  buffer.c  buffer.h  test.c
trunk/kernel/conf/: conf.c  conf.h
trunk/kernel/logger/: logger.c  logger.h
trunk/kernel/memory/: memory.c  memory.h  test.c
trunk/kernel/socket/: socket.h
trunk/kernel/socket/udp/: udp.c  udp.h
trunk/kernel/string/: string.c  string.h
